--- a/vscode-remote/Dockerfile
+++ b/vscode-remote/Dockerfile
@@ -1,4 +1,4 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/debian-base/amd64:4.2.0
+ARG BUILD_FROM=ghcr.io/hassio-addons/debian-base/amd64:5.3.1
 # hadolint ignore=DL3006
 FROM ${BUILD_FROM}
 
@@ -24,26 +24,26 @@ RUN \
     apt-get update \
     \
     && apt-get install -y --no-install-recommends \
-        ack=2.24-1 \
-        bsdtar=3.3.3-4+deb10u1 \
-        build-essential=12.6 \
-        colordiff=1.0.18-1 \
-        git=1:2.20.1-2+deb10u3 \
-        iputils-ping=3:20180629-2+deb10u2 \
-        locales=2.28-10 \
-        mariadb-client=1:10.3.27-0+deb10u1 \
-        mosquitto-clients=1.5.7-1+deb10u1 \
-        net-tools=1.60+git20180626.aebd88e-1 \
-        nmap=7.70+dfsg1-6+deb10u1 \
-        openssh-client=1:7.9p1-10+deb10u2 \
-        openssh-server=1:7.9p1-10+deb10u2 \
-        openssl=1.1.1d-0+deb10u6 \
-        pwgen=2.08-1 \
-        python3-dev=3.7.3-1 \
-        python3=3.7.3-1 \
-        wget=1.20.1-1.1 \
-        uuid-runtime=2.33.1-0.1 \
-        zsh=5.7.1-1 \
+        ack=3.4.0-1 \
+        libarchive-tools=3.4.3-2+deb11u1 \
+        build-essential=12.9 \
+        colordiff=1.0.18-1.1 \
+        git=1:2.30.2-1 \
+        iputils-ping=3:20210202-1 \
+        locales=2.31-13+deb11u3 \
+        mariadb-client=1:10.5.15-0+deb11u1 \
+        mosquitto-clients=2.0.11-1 \
+        net-tools=1.60+git20181103.0eebece-1 \
+        nmap=7.91+dfsg1+really7.80+dfsg1-2 \
+        openssh-client=1:8.4p1-5 \
+        openssh=8.8_p1-r1 \
+        openssl=1.1.1n-0+deb11u1 \
+        pwgen=2.08-r1 \
+        python3-dev=3.9.2-3 \
+        python3=3.9.2-3 \
+        wget=1.21-1+deb11u1 \
+        uuid-runtime=2.36.1-8+deb11u1 \
+        zsh=5.8-6+deb11u1 \
     \
     && sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen \
     && locale-gen \
@@ -62,19 +62,19 @@ RUN \
         \
         echo "https://marketplace.visualstudio.com/_apis/public/gallery/publishers/${vendor}/vsextensions/${slug}/${version}/vspackage"; \
         curl -JL --retry 5 -o "/tmp/${extention}-${version}.vsix" \
-            -H "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.130 Safari/537.36" \
-            -H "x-market-user-id: ${uuid}" \
-            "https://marketplace.visualstudio.com/_apis/public/gallery/publishers/${vendor}/vsextensions/${slug}/${version}/vspackage"; \
+        -H "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.130 Safari/537.36" \
+        -H "x-market-user-id: ${uuid}" \
+        "https://marketplace.visualstudio.com/_apis/public/gallery/publishers/${vendor}/vsextensions/${slug}/${version}/vspackage"; \
         mkdir -p "//root/.vscode-server/extensions/${extention}-${version}"; \
         bsdtar --strip-components=1 -xf "/tmp/${extention}-${version}.vsix" \
-                    -C "/root/.vscode-server/extensions/${extention}-${version}" extension; \
+        -C "/root/.vscode-server/extensions/${extention}-${version}" extension; \
         [ $? -ne 0 ] && exit 1; \
         sleep 1; \
     done < /root/vscode.extensions \
     && ls -la /root/.vscode-server/extensions/ \
     \
     && curl -L -s -o /usr/bin/ha \
-        "https://github.com/home-assistant/cli/releases/download/4.3.0/ha_${BUILD_ARCH}" \
+        "https://github.com/home-assistant/cli/releases/download/4.15.1/ha_${BUILD_ARCH}" \
     && chmod a+x /usr/bin/ha \
     \
     && git clone --branch master --single-branch --depth 1 \
@@ -100,12 +100,13 @@ RUN \
         python3-dev \
         uuid-runtime \
     \
-    && find /usr/local/lib/python3.7/ -type d -name tests -depth -exec rm -rf {} \; \
-    && find /usr/local/lib/python3.7/ -type d -name test -depth -exec rm -rf {} \; \
-    && find /usr/local/lib/python3.7/ -name __pycache__ -depth -exec rm -rf {} \; \
-    && find /usr/local/lib/python3.7/ -name "*.pyc" -depth -exec rm -f {} \; \
+    && find /usr/local \
+        \( -type d -a -name test -o -name tests -o -name '__pycache__' \) \
+        -o \( -type f -a -name '*.pyc' -o -name '*.pyo' \) \
+        -exec rm -rf '{}' + \
     \
     && rm -fr \
+        /root/.cache \
         /tmp/* \
         /var/{cache,log}/* \
         /var/lib/apt/lists/*
